# data-counter

./: data-counter.cabal
src/Data/: Counter.hs
test/Data/: CounterSpec.hs
